# tarefas-desktop

./: COPYING  README.md  build.sh  com.github.juarezfranco.tarefas-desktop.yml  meson.build
.github/workflows/: main.yml
data/: com.github.juarezfranco.tarefas-desktop.appdata.xml.in  com.github.juarezfranco.tarefas-desktop.desktop.in  meson.build  metainfo.xml
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES  com.github.juarezfranco.tarefas-desktop.pot  es.po  pt.po
src/: Application.vala
src/Controllers/: TasksController.vala
src/Dao/: DatabaseManager.vala  TaskDao.vala
src/Interfaces/: Migration.vala  Model.vala
src/Migrations/: CreateTableMigrations.vala  CreateTableSettings.vala  CreateTableTasks.vala
src/Models/: Task.vala
src/Resources/: Strings.vala  Styles.vala
src/Views/: MainWindow.vala  TaskForm.vala  TaskItemList.vala  TaskShow.vala  TaskView.vala  TasksList.vala
src/Widgets/: FormGroup.vala  TextArea.vala
